tests/ui/panic-handler/panic-handler-with-target-feature.stderr
error: `#[target_feature]` cannot be applied to a `#[panic_handler]` function
  --> $DIR/panic-handler-with-target-feature.rs:10:1
   |
LL |   #[target_feature(enable = "avx2")]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / fn panic(info: &PanicInfo) -> ! {
LL | |     unimplemented!();
LL | | }
   | |_- `#[panic_handler]` function is not allowed to have `#[target_feature]`

error: aborting due to 1 previous error

